app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

#logo {
    float: left;
    margin-right: 10px;
    font-size: 1.7em;
    color: #fff;
    text-transform: uppercase;
    letter-spacing: -1px;
    padding-top: 9px;
    font-weight: bold;
  }
  
  #logo:hover {
    color: #fff;
    text-decoration: none;
  }

* {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    // border: 1px blue solid;
}

@media screen and (min-width: 1px) {
    .body {
        width: 90vw;
        /* outline: blue solid 2px; */
        margin-left: auto;
        margin-right: auto;
        /* text-align: center; */
        font-style: sans-serif;
        /* background-color: blue; */
    }
    
    #portfolio, #environments, #performance {
        width: 90%;
    }

    .body .titleimage h1 {
        font-size: 3rem;
    }

    .allocation {
        font-size: 1rem;
    }
}

@media screen and (min-width: 1000px) {
    .body {
        width: 70vw;
        /* outline: blue solid 2px; */
        margin-left: auto;
        margin-right: auto;
        /* text-align: center; */
        font-style: sans-serif;
        /* background-color: blue; */
    }
    
    #portfolio, #environments, #performance {
        width: 90%;
    }

    .body .titleimage h1 {
        font-size: 4rem;
    }

    .allocation {
        font-size: 2.25rem;
    }
}

@media screen and (min-width: 1500px) {
    .body {
        width: 50vw;
        /* outline: blue solid 2px; */
        margin-left: auto;
        margin-right: auto;
        /* text-align: center; */
        font-style: sans-serif;
        /* background-color: blue; */
    }
    
    #portfolio, #environments, #performance {
        width: 80%;
    }

    .body .titleimage h1 {
        font-size: 5rem;
    }

    .allocation {
        font-size: 2.5rem;
    }

}

.titleimage, .environments, .performance {
    text-align: center;
}

.allocation {
    display: inline-block;
}

.allocation {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2.5rem;
}

.story, .macro, .performance {
    font-size: 2.25rem;
    text-align: justify;
}

h1 {
    font-size: 5rem;
}

#performance {
    width: 100%;
}

/* Add some padding to the top of the body to accommodate the fixed navbar */
body {
    padding-top: 70px; /* Adjust this value based on your navbar height */
}

/* Add margin to the top of the h1 element */
.titleimage h1 {
    margin-top: 20px; /* Adjust this value as needed */
}

// Hambuger button code
@media (max-width: 768px) {
    /* Hide the regular navbar links on small screens */
    .navbar-nav {
      display: none;
    }
    
    /* Show the hamburger button on small screens */
    .navbar-toggle {
      display: block;
    }
    
    /* Style for the hamburger icon bars */
    .icon-bar {
      background-color: #ffffff; /* Adjust as needed */
    }
    
    /* Override Bootstrap's default navbar collapse behavior */
    .navbar-collapse.collapse {
      display: none !important;
    }
    
    .navbar-collapse.collapse.in {
      display: block !important;
    }
  }
  
  .allocation {
    margin-top: 25px;
  }

